# ProgramozasBeadando_2

./: BaseClass.cpp  BaseClass.h  CMakeLists.txt  README.md  main.cpp  scrach.cpp  test.txt
BaseClass/: BaseClass.h  CMakeLists.txt
DateTime/: CMakeLists.txt  DateTime.cpp  DateTime.h
Entry/: CMakeLists.txt  Entry.cpp  Entry.h
EntryLister/: CMakeLists.txt  EntryLister.cpp  EntryLister.h
Reception/: CMakeLists.txt  Reception.cpp  Reception.h
Set/: SET.h
horse_race_balance/: CMakeLists.txt  HorseRaceBalance.cpp  HorseRaceBalance.h
read_in/: ReadIn.h
src/: HorseRaceBalance.cpp  HorseRaceBalance.h  main.cpp
test/: CMakeLists.txt  test.cpp
test/lib/gtest-1.7.0/: CMakeLists.txt
test/lib/gtest-1.7.0/build-aux/: install-sh
test/lib/gtest-1.7.0/samples/: sample1_unittest.cc
test/lib/gtest-1.7.0/test/: gtest_main_unittest.cc
test/unit_test/: CMakeLists.txt  run_unit_tests.cpp  test.cpp  testDateTime.cpp  testHorsRaceBalance.cpp  testReadin.cpp  testReception.cpp  testSET.cpp
